--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,4 +8,5 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "../../../public/assets/css/swiper.css";
 @import "../../../public/assets/css/item.css";
