--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,3 +1,60 @@
-.navbar-nav .nav-item.active .nav-link {
+:root {
+    --blue: #3129FF;
+    --red: #FE4040;
+    --white: #fff;
+    --line-width: 8px;
+    --nav-shadow: 0px 4px 20px 2px #3129ff52;
+}
+
+.navbar {
+    background-color: var(--blue) !important;
+    box-shadow: var(--nav-shadow);
+    border-radius: 1.6em;
+    padding: 1em;
+}
+
+.navbar-brand {
+    color: var(--white) !important;
     font-weight: bold;
+}
+
+.navbar-toggler {
+    border: none;
+}
+
+.navbar-toggler-icon {
+    background-color: var(--white);
+    border-radius: 5px;
+}
+
+.navbar-nav .nav-item {
+    position: relative;
+}
+
+.navbar-nav .nav-link {
+    color: var(--white) !important;
+    font-weight: bold;
+    opacity: 0.8;
+    transition: opacity .3s ease, transform .3s ease;
+    white-space: nowrap;
+}
+
+.navbar-nav .nav-item.active .nav-link,
+.navbar-nav .nav-link:hover {
+    opacity: 1;
+    transform: translateY(calc(var(--line-width) / 2 * -1));
+}
+
+.navbar-nav .nav-item.active .nav-link::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    width: 120%;
+    height: var(--line-width);
+    background-color: var(--red);
+    border-radius: 999px;
+    box-shadow: 0 4px 6px 2px rgba(254, 64, 64, 0.3);
+    transform: translateX(-50%);
 }
