--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -1,13 +1,1 @@
-button{
-    border: solid 1px;
-    background-color: #3094e3;
-    color:white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 8px;
-}
+@import "default.css";
