--- a/public/assets/css/item.css
+++ b/public/assets/css/item.css
@@ -1,38 +1,75 @@
-#post-list {
-    margin-bottom: auto;
-    &.flex.horizontal.centered {
-        justify-content: center;
-    }
-    &.flex.horizontal {
-        flex-direction: row;
-        justify-content: start;
-        flex-grow: 1;
-    }
-    &.flex.wrap {
-        flex-wrap: wrap;
-    }
-    &.flex {
+.events {
+    background-color: var(--default-offwhite);
+    .container {
         display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 30px;
     }
-    .card-container {
-        width: calc(50% - 4em);
-        flex-grow: 1;
-        margin: 2em;
-        flex: 0 1 40%;
-        .card {
-            background-color: #fff;
-            padding: 2em;
-            border-radius: 2em;
-            position: relative;
-            overflow: hidden;
+}
+
+.item {
+    border-radius: 25px;
+    background-color: var(--default-white);
+    max-width: calc(100% / 2 - 40px);
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+
+    .block {
+        &.image-block {
             img {
-                margin: -2em 0 2em -2em;
-                width: calc(100% + 4em);
                 max-height: 400px;
+                width: 100%;
                 object-fit: cover;
+                margin: 0 auto;
+            }
+        }
+        &.text-block {
+            padding: 40px;
+            height: 100%;
+            display: flex;
+            flex-wrap: wrap;
+
+            .item-header {
+                width: 100%;
+                flex: 1 1 auto;
+                height: auto;
+                h3 {
+                    font-size: 28px;
+                    font-weight: 700;
+                    display: inline;
+                    overflow-wrap: break-word;
+                    hyphens: auto;
+                    word-wrap: break-word;
+                    position: relative;
+                    z-index: 1;
+                    margin: 0;
+                    background-image: linear-gradient(to right, var(--default-pink), var(--default-pink));
+                    background-size: 100% 8px;
+                    background-repeat: no-repeat;
+                    background-position: 1em calc(100% - 8px / 2);
+                    padding-inline-end: 1em;
+                }
+                h6 {
+                    font-size: 14px;
+                    font-weight: 700;
+                }
+            }
+            .item-body {
+                width: 100%;
+
+                p {
+                    color: var(--default-grey);
+                    font-size: 20px;
+                }
+            }
+            .item-footer {
+                width: 100%;
+                align-content: flex-end;
             }
         }
     }
 }
-
 
