--- a/public/assets/css/item.css
+++ b/public/assets/css/item.css
@@ -1,80 +1,89 @@
 .events {
-    background-color: var(--default-offwhite);
     .container {
         display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 30px;
-    }
-}
-
-.item {
-    border-radius: 25px;
-    background-color: var(--default-white);
-    max-width: calc(100% / 2 - 60px);
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-
-    .block {
-        &.image-block {
-            img {
-                max-height: 400px;
-                width: 100%;
-                object-fit: cover;
-                margin: 0 auto;
-            }
-        }
-        &.text-block {
-            padding: 40px;
-            height: 100%;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 50px;
+        .items {
+            max-width: 1024px;
+            width: 100%;
             display: flex;
             flex-wrap: wrap;
-
-            .item-header {
+            gap: 50px;
+            .item {
+                border-radius: 25px;
+                background-color: var(--default-white);
+                max-width: calc(100% / 2 - 50px);
                 width: 100%;
-                flex: 1 1 auto;
                 height: auto;
-                h3 {
-                    font-size: 28px;
-                    font-weight: 700;
-                    display: inline;
-                    overflow-wrap: break-word;
-                    hyphens: auto;
-                    word-wrap: break-word;
-                    position: relative;
-                    z-index: 1;
-                    margin: 0;
-                    background-image: linear-gradient(to right, var(--default-pink), var(--default-pink));
-                    background-size: 100% 8px;
-                    background-repeat: no-repeat;
-                    background-position: 1em calc(100% - 8px / 2);
-                    padding-inline-end: 1em;
-                }
-                h6 {
-                    font-size: 14px;
-                    font-weight: 700;
-                }
-            }
-            .item-body {
-                width: 100%;
+                display: flex;
+                flex-direction: column;
 
-                p {
-                    color: var(--default-grey);
-                    font-size: 20px;
+                .block {
+                    &.image-block {
+                        img {
+                            max-height: 400px;
+                            width: 100%;
+                            object-fit: cover;
+                            margin: 0 auto;
+                        }
+                    }
+                    &.text-block {
+                        padding: 40px;
+                        height: 100%;
+                        display: flex;
+                        flex-wrap: wrap;
+
+                        .item-header {
+                            width: 100%;
+                            flex: 1 1 auto;
+                            height: auto;
+                            h3 {
+                                font-size: 28px;
+                            }
+                            h6 {
+                                font-size: 14px;
+                                font-weight: 700;
+                            }
+                        }
+                        .item-body {
+                            width: 100%;
+
+                            p {
+                                color: var(--default-grey);
+                                font-size: 20px;
+                            }
+                        }
+                        .item-footer {
+                            width: 100%;
+                            align-content: flex-end;
+                        }
+                    }
                 }
-            }
-            .item-footer {
-                width: 100%;
-                align-content: flex-end;
             }
         }
     }
 }
 
-@media only screen and (max-width: 980px) {
-    .item {
-        max-width: calc(100%);
+@media only screen and (max-width: 1200px) {
+    .events {
+        .container {
+            .items {
+                .item {
+                    max-width: 100%;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .events {
+        .container {
+            flex-direction: column-reverse;
+            .items {
+                max-width: 100%;
+            }
+        }
     }
 }
