--- a/public/assets/css/sidebar.css
+++ b/public/assets/css/sidebar.css
@@ -8,6 +8,11 @@
     h2 {
         font-size: 24px;
     }
+    p{
+        color: var(--default-grey);
+        font-weight: 700;
+        font-style: italic;
+    }
     h4 {
         font-size: 16px;
         margin-top: 20px;
