--- a/public/assets/css/swiper.css
+++ b/public/assets/css/swiper.css
@@ -4,6 +4,9 @@
     background-color: white;
     margin-top: 40px;
     margin-bottom: 40px;
+    border-radius: 25px;
+    height: 100%;
+    max-height: 300px;
     .swiper-button-prev, .swiper-button-next {
         height: 100%;
         top: 0;
@@ -12,20 +15,12 @@
         }
     }
     .swiper-slide {
-        .a {
-            margin-top: 40px;
-            margin-bottom: 30px;
-        }
-        .link {
-            margin-top: 30px;
-            font-style: italic;
-        }
-        .author {
-            font-style: italic;
-            margin-bottom: 40px;
-            &:before {
-                content: '– ';
-            }
+        display: flex;
+        margin: auto;
+        align-content: center;
+        img {
+            margin: auto;
+            max-height: 300px;
         }
     }
 }
