--- a/public/assets/css/event-details.css
+++ b/public/assets/css/event-details.css
@@ -5,6 +5,7 @@
         justify-content: space-between;
         gap: 50px;
         .info {
+            width: 100%;
             max-width: 980px;
             .intro {
                 background-color: var(--default-white);
