--- a/public/assets/css/default.css
+++ b/public/assets/css/default.css
@@ -90,12 +90,19 @@ button, a.button {
     }
 }
 
-body .container {
-    max-width: 1440px;
-    width: 100%;
-    position: relative;
-    margin: 0 auto;
-    padding: 0 20px;
+body {
+    .container {
+        max-width: 1440px;
+        width: 100%;
+        position: relative;
+        margin: 0 auto;
+        padding: 0 20px;
+    }
+    &.admin {
+        .container {
+            max-width: 1280px;
+        }
+    }
 }
 
 form {
