ag-99 added start_date, end_date, location

--- a/public/assets/css/item.css
+++ b/public/assets/css/item.css
@@ -26,6 +26,9 @@
                             width: 100%;
                             object-fit: cover;
                             margin: 0 auto;
+                            &.no-image {
+                                object-fit: contain;
+                            }
                         }
                     }
                     &.text-block {
