--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -4,7 +4,8 @@ footer {
     .container {
         width: 100%;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
+        align-items: flex-end;
         gap: 50px;
         &:first-child {
             margin: 0 auto;
@@ -17,6 +18,7 @@ footer {
             border-radius: 25px;
             max-width: 600px;
             width: 100%;
+            height: 100%;
             overflow: hidden;
             position: relative;
             flex: 0 1 40%;
@@ -46,9 +48,7 @@ footer {
                     }
                 }
                 &.end{
-                    align-content: flex-end;
                     color: darkgray;
-                    position:absolute;
                     bottom:25px;
                 }
             }
