ag-99 added soft delete option

--- a/public/assets/css/item.css
+++ b/public/assets/css/item.css
@@ -28,6 +28,7 @@
                             margin: 0 auto;
                             &.no-image {
                                 object-fit: contain;
+                                opacity: 0.6;
                             }
                         }
                     }
