ag-99 simplfied image delete

--- a/public/assets/css/item.css
+++ b/public/assets/css/item.css
@@ -18,6 +18,7 @@
                 height: auto;
                 display: flex;
                 flex-direction: column;
+                overflow: hidden;
 
                 .block {
                     &.image-block {
