--- a/public/assets/css/default.css
+++ b/public/assets/css/default.css
@@ -1,8 +1,9 @@
+@import 'fonts.css';
 :root {
     --default-lightblue: #007bff;
     --default-darkblue: #0056b3;
     --default-white: #ffffff;
-    --default-offwhite: #efefef;
+    --default-offwhite: #ecebff;
     --default-red: #dc3545;
     --default-black: #000000;
     --default-grey: #B0B0B0;
@@ -16,10 +17,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Quicksand', sans-serif;
 }
 
 body {
-    font-family: 'Quicksand', sans-serif;
     background-color: var(--default-offwhite);
 }
 
