--- a/public/assets/css/banner.css
+++ b/public/assets/css/banner.css
@@ -1,7 +1,6 @@
 :root{
     --banner-background-color: #d5d2ff;
     --red: #FE4040;
-    --pink: #E39FF6;
     --cyan: #08E8DE;
 
     --text-scale-base: 5em;
@@ -12,12 +11,6 @@
     --circle-large: min(20em, 24vw);
 }
 
-html, body {
-    font-size: 20px;
-    margin: 0;
-    padding: 0;
-}
-
 .concat-banner {
     display: flex;
     height: max(40vh, 40vw);
@@ -26,119 +19,100 @@ html, body {
     justify-content: center;
     align-items: center;
     padding: 2rem;
+    .concat-title {
+        max-width: 80%;
+        position: relative;
+        z-index: 2;
+        color: white;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: flex-end;
+        &:before, &:after, > .real-pseudo-element {
+            display: block;
+            content: '';
+            opacity: .67;
+            position: absolute;
+            transform: translate(-50%, -50%);
+            z-index: -1;
+        }
+        &:before {
+            width: var(--circle-small);
+            height: var(--circle-small);
+            background-color: var(--red);
+            border-radius: min(2em, 4vw);
+            top: 24%;
+            left: 0;
+        }
+        &:after {
+            width: var(--circle-medium);
+            height: var(--circle-medium);
+            background-color: var(--default-pink);
+            border-radius: min(3em, 3vw);
+            top: 80%;
+            right: -1vw;
+        }
+        > .real-pseudo-element {
+            width: var(--circle-large);
+            height: var(--circle-large);
+            background-color: var(--cyan);
+            border-radius: min(10em, 6vw);
+            top: 35%;
+            right: -22vw;
+        }
+        img {
+            height: min(15em, 15vw);
+            margin-left: min(2em, 2vw);
+        }
+        h1, h2 {
+            font-weight: bold;
+        }
+        h1 {
+            font-size: var(--text-scale-base);
+            text-align: right;
+        }
+        h2 {
+            font-size: calc(var(--text-scale-base) / 3);
+        }
+    }
 }
 
-.concat-title {
-    max-width: 80%;
-    position: relative;
-    z-index: 2;
-    color: white;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: flex-end;
-}
-
-.concat-title::before,
-.concat-title::after,
-.concat-title > .real-pseudo-element {
-    display: block;
-    content: '';
-    opacity: .67;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    z-index: -1;
-}
-
-.concat-title::before {
-    width: var(--circle-small);
-    height: var(--circle-small);
-    background-color: var(--red);
-    border-radius: min(2em, 4vw);
-    top: 24%;
-    left: 0;
-}
-
-.concat-title .real-pseudo-element {
-    width: var(--circle-large);
-    height: var(--circle-large);
-    background-color: var(--cyan);
-    border-radius: min(10em, 6vw);
-    top: 35%;
-    right: -22vw;
-}
-
-.concat-title::after {
-    width: var(--circle-medium);
-    height: var(--circle-medium);
-    background-color: var(--pink);
-    border-radius: min(3em, 3vw);
-    top: 80%;
-    right: -1vw;
-}
-
-.concat-title img {
-    height: min(15em, 15vw);
-    margin-left: min(2em, 2vw);
-}
-
-.concat-title h1,
-.concat-title h2 {
-    font-family: 'Quicksand', sans-serif;
-    font-weight: bold;
-}
-
-.concat-title h1 {
-    font-size: var(--text-scale-base);
-    text-align: right;
-}
-
-.concat-title h2 {
-    font-size: calc(var(--text-scale-base) / 3);
-}
 
 @media (max-width: 1350px) {
     .concat-banner {
         height: auto;
         padding: 3rem 1rem;
-    }
-
-    .concat-title {
-        text-align: center;
-        max-width: 90%;
-    }
-
-    .concat-title h1 {
-        font-size: clamp(1.5em, 8vw, 5em);
-    }
-
-    .concat-title h2 {
-        display: none;
-    }
-
-    .concat-title img {
-        height: clamp(4em, 15vw, 10em);
-        width: auto;
-    }
-
-    .concat-title::before {
-        width: min(6em, 12vw);
-        height: min(6em, 12vw);
-        top: 20%;
-        left: 3%;
-    }
-
-    .concat-title .real-pseudo-element {
-        width: min(14em, 20vw);
-        height: min(14em, 20vw);
-        top: 50%;
-        right: -12vw;
-    }
-
-    .concat-title::after {
-        width: min(8em, 12vw);
-        height: min(8em, 12vw);
-        top: 85%;
-        right: 8%;
+        .concat-title {
+            text-align: center;
+            max-width: 90%;
+            h1 {
+                font-size: clamp(2em, 10vw, 5em);
+            }
+            h2 {
+                display: none;
+            }
+            img {
+                height: clamp(4em, 15vw, 10em);
+                width: auto;
+            }
+            &:before {
+                width: min(6em, 12vw);
+                height: min(6em, 12vw);
+                top: 20%;
+                left: 3%;
+            }
+            .real-pseudo-element {
+                width: min(14em, 20vw);
+                height: min(14em, 20vw);
+                top: 50%;
+                right: -12vw;
+            }
+            .concat-title::after {
+                width: min(8em, 12vw);
+                height: min(8em, 12vw);
+                top: 85%;
+                right: 8%;
+            }
+        }
     }
 }
