--- a/public/assets/css/default.css
+++ b/public/assets/css/default.css
@@ -22,6 +22,7 @@
 
 body {
     background-color: var(--default-offwhite);
+    font-size: 20px;
 }
 
 p {
@@ -50,6 +51,28 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 
+a {
+    display: block;
+    position: relative;
+    width: fit-content;
+    &:after {
+        content: "";
+        display: block;
+        width: 0;
+        height: 2px;
+        background: red;
+        transition: width 0.3s;
+        position: absolute;
+    }
+    &:hover {
+        color: black;
+        text-decoration: none;
+        &:after {
+            width: 100%;
+        }
+    }
+}
+
 button, a.button {
     background-color: var(--default-lightblue);
     color: var(--default-white);
@@ -60,6 +83,11 @@ button, a.button {
     transition: 0.3s;
     font-weight: 600;
     margin: 30px auto;
+    cursor: pointer;
+    font-size: 20px;
+    &:after {
+        content: none;
+    }
     &.right {
         float: right;
         clear: both;
