--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -13,7 +13,7 @@ footer {
         .footerNav {
             display:flex;
             flex-direction:column;
-            background-color: white;
+            background-color: var(--default-white);
             padding: 30px;
             border-radius: 25px;
             max-width: 600px;
@@ -23,33 +23,11 @@ footer {
             position: relative;
             flex: 0 1 40%;
             word-wrap: normal;
-            p{
+            p {
                 word-wrap: normal;
                 font-weight:bold;
-                a {
-                    display: block;
-                    position: relative;
-                    width: fit-content;
-                    &:after {
-                        content: "";
-                        display: block;
-                        width: 0;
-                        height: 2px;
-                        background: red;
-                        transition: width 0.3s;
-                        position: absolute;
-                    }
-                    &:hover {
-                        color: black;
-                        text-decoration: none;
-                        &:after {
-                            width: 100%;
-                        }
-                    }
-                }
-                &.end{
-                    color: darkgray;
-                    bottom:25px;
+                &.end {
+                    color: var(--default-grey);
                 }
             }
         }
@@ -64,12 +42,6 @@ footer {
             .footerNav {
                 min-width: 0;
                 margin: 0 auto;
-                p {
-                    &.end {
-                        position: relative;
-                        bottom: 0;
-                    }
-                }
             }
         }
     }
