--- a/public/assets/css/swiper.css
+++ b/public/assets/css/swiper.css
@@ -1,7 +1,7 @@
 .swiper-container {
     position: relative;
     overflow: hidden;
-    background-color: white;
+    background-color: var(--default-white);
     margin-top: 40px;
     margin-bottom: 40px;
     border-radius: 25px;
@@ -11,7 +11,7 @@
         height: 100%;
         top: 0;
         &:after {
-            color: black;
+            color: var(--default-black);
         }
     }
     .swiper-slide {
