--- a/public/assets/css/sponsor.css
+++ b/public/assets/css/sponsor.css
@@ -1,5 +1,48 @@
-.sponsor p{
-    color: var(--default-grey);
+.instruction-message{
+    background-color: white;
+    border-radius: 2em;
+    padding: 2em;
+    display:flex;
+    justify-content: center;
+    width: calc(60%);
+    margin: 160px auto 0 auto; /* Centers horizontally */
+}
+
+.instruction-message p{
+    color: var(--default-darkgrey);
+    font-size: 30px;
+}
+
+.sponsors-overview{
+    display: flex;
+    justify-content: center;
+}
+
+.sponsors-container {
+    display: flex;
+    flex-wrap: wrap; /* Allow items to wrap onto multiple lines */
+    gap: 3em; /* Add space between the cards */
+    justify-content: center; /* Center the items */
+    width: 100%; /* Ensure the container takes full width */
+    margin: 50px;
+}
+
+.sponsor {
+    background-color: white;
+    padding: 2em;
+    border-radius: 2em;
+    position: relative;
+    overflow: hidden;
+    width: calc(50% - 3em); /* Adjust width to fit two columns with gap */
+    box-sizing: border-box;
+}
+
+.sponsor-image {
+    margin: 0;
+    width: 100%;
+    height: 300px;
+    max-height: 300px;
+    object-fit: contain;
 }
 
 .sponsor h1{
