--- a/public/assets/css/default.css
+++ b/public/assets/css/default.css
@@ -21,9 +21,71 @@
 }
 
 body {
-    background-color: var(--default-offwhite);
     font-size: 20px;
+    background-color: #f4f3ff;
+    &.home {
+        background-color: var(--default-offwhite);
+    }
 }
+
+.section {
+    position: relative;
+    padding-bottom: 100px;
+    &:before {
+        display: block;
+        content: '';
+        width: 100%;
+        height: 200px;
+        background: url('../images/content-backer.svg');
+        background-position: center top;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: absolute;
+        top: -200px;
+        left: 0;
+    }
+
+    @media only screen and (max-width: 2100px) {
+        &:before {
+            top: -160px
+        }
+    }
+    @media only screen and (max-width: 1440px) {
+        &:before {
+            top: -120px
+        }
+    }
+    @media only screen and (max-width: 992px) {
+        margin-top: 50px;
+        &:before {
+            height: 100px;
+            top: -150px;
+        }
+    }
+    @media only screen and (max-width: 700px) {
+        margin-top: 0;
+        &:before {
+            top: -75px;
+        }
+    }
+}
+
+body:not(.home) {
+    .section {
+        margin-top: 350px;
+        background-color: var(--default-offwhite);
+        @media only screen and (max-width: 1024px) {
+            margin-top: 300px;
+        }
+        @media only screen and (max-width: 992px) {
+            margin-top: 250px;
+            &:before {
+                top: -100px;
+            }
+        }
+    }
+}
+
 
 p {
     line-height: 30px;
@@ -121,9 +183,6 @@ button, a.button {
 
 body {
     .container {
-        &:first-child {
-            margin: 100px auto;
-        }
         max-width: 1440px;
         width: 100%;
         position: relative;
