#98 updated homeSwiper to show 2 at a time, css format

--- a/public/assets/css/sidebar.css
+++ b/public/assets/css/sidebar.css
@@ -1,3 +1,10 @@
+.container.has-sidebar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 50px;
+}
+
 .sidebar {
     background-color: var(--default-white);
     padding: 40px;
@@ -44,11 +51,10 @@
 }
 
 @media only screen and (max-width: 800px) {
-    .events {
-        .container {
-            .sidebar {
-                min-width: 100%;
-            }
+    .container.has-sidebar {
+        flex-direction: column-reverse;
+        .sidebar {
+            min-width: 100%;
         }
     }
 }
