--- a/public/assets/css/register.css
+++ b/public/assets/css/register.css
@@ -1,3 +1,8 @@
+:root {
+    --button-shadow: 0px 4px 6px 2px rgba(49, 41, 255, 0.2);
+    --button-shadow-hover: 0px 8px 12px 4px rgba(49, 41, 255, 0.3);
+}
+
 .register {
     .container {
         display: flex;
@@ -19,6 +24,16 @@
                 p {
                     font-size: 20px;
                 }
+
+                .btn {
+                    font-weight: bold;
+                    text-align: center;
+                    border: none;
+                    border-radius: 8px;
+                    cursor: pointer;
+                    transition: all 0.3s ease;
+                }
+
                 .btn-primary {
                     background-color: var(--red);
                     color: var(--white);
