--- a/public/assets/css/register.css
+++ b/public/assets/css/register.css
@@ -51,3 +51,31 @@
         }
     }
 }
+
+@media (max-width: 768px) {
+    .register {
+        .container {
+            .info {
+                .form {
+                    h2 {
+                        font-size: 1.5rem;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    .register {
+        .container {
+            .info {
+                .form {
+                    h2 {
+                        font-size: 1.2rem;
+                    }
+                }
+            }
+        }
+    }
+}
