#98 fixed sponsor styling

--- a/public/assets/css/default.css
+++ b/public/assets/css/default.css
@@ -139,6 +139,11 @@ a {
             width: 100%;
         }
     }
+    &.no-line {
+        &:after {
+            content: none;
+        }
+    }
 }
 
 button, a.button {
