--- a/public/assets/css/admin-layout.css
+++ b/public/assets/css/admin-layout.css
@@ -1,5 +1,7 @@
 .admin {
     .container {
+        height: 100%;
+        position: relative;
         .filter-wrapper {
             width: 100%;
             display: flex;
@@ -11,6 +13,9 @@
                     margin: 0;
                 }
             }
+        }
+        &.has-sliders {
+
         }
     }
 
