--- a/public/assets/css/fields.css
+++ b/public/assets/css/fields.css
@@ -2,6 +2,8 @@
     position: absolute;
     bottom: 0;
     width: 100%;
+    left: 0;
+    padding: 0 20px;
     .button {
         margin: 0 auto 15px;
     }
