--- a/public/assets/css/swiper.css
+++ b/public/assets/css/swiper.css
@@ -5,8 +5,7 @@
     margin-top: 40px;
     margin-bottom: 40px;
     border-radius: 25px;
-    height: 100%;
-    max-height: 300px;
+    height: 350px;
     .swiper-button-prev, .swiper-button-next {
         height: 100%;
         top: 0;
@@ -22,5 +21,12 @@
             margin: auto;
             max-height: 300px;
         }
+    }
+}
+
+.sideslider {
+    .swiper-container {
+        height: 100%;
+        max-height: 300px;
     }
 }
