--- a/public/assets/css/default.css
+++ b/public/assets/css/default.css
@@ -177,6 +177,8 @@ button, a.button {
         border: none;
         transform: translateY(0);
         transition: transform 0.3s ease, box-shadow 0.3s ease;
+        padding: 10px 20px;
+        font-weight: 600;
         &:hover {
             box-shadow: 0px 8px 12px 4px var(--input-shadow-color);
             transform: translateY(-5px);
