--- a/public/assets/css/event-details.css
+++ b/public/assets/css/event-details.css
@@ -7,6 +7,7 @@
         .info {
             width: 100%;
             max-width: 980px;
+            overflow: hidden;
             .intro {
                 background-color: var(--default-white);
                 padding: 40px;
@@ -23,7 +24,7 @@
 
 @media only screen and (max-width: 1420px) {
     .details {
-        .container {
+        .container, .container.has-sidebar {
             .info {
                 max-width: 800px;
             }
@@ -34,7 +35,7 @@
 
 @media only screen and (max-width: 1024px) {
     .details {
-        .container {
+        .container, .container.has-sidebar {
             flex-direction: column-reverse;
             gap: 50px;
             .info {
