--- a/public/assets/css/sidebar.css
+++ b/public/assets/css/sidebar.css
@@ -41,7 +41,7 @@
 }
 
 @media only screen and (max-width: 1080px) {
-    .event {
+    .details {
         .container {
             .sidebar {
                 max-width: 400px;
@@ -51,7 +51,7 @@
 }
 
 @media only screen and (max-width: 1024px) {
-    .event {
+    .details {
         .container {
             .sidebar {
                 max-width: 100%;
