#ag-105 item / sponsor padding

--- a/public/assets/css/item.css
+++ b/public/assets/css/item.css
@@ -74,6 +74,11 @@
         .items {
             .item {
                 max-width: 100%;
+                .block {
+                    &.text-block {
+                        padding: 30px
+                    }
+                }
             }
         }
     }
