--- a/public/assets/css/event-details.css
+++ b/public/assets/css/event-details.css
@@ -40,6 +40,7 @@
             gap: 50px;
             .info {
                 max-width: 100%;
+                padding: 30px;
                 .intro {
                     h2 {
                         font-size: 36px;
