--- a/public/assets/css/sponsor.css
+++ b/public/assets/css/sponsor.css
@@ -33,16 +33,22 @@
             overflow: hidden;
             width: calc(50% - 3em);
             box-sizing: border-box;
+
+            > a:first-child {
+                margin: 0 auto;
+                .sponsor-image {
+                    margin: 0;
+                    width: 100%;
+                    height: 300px;
+                    max-height: 300px;
+                    object-fit: contain;
+                }
+            }
+
             h1 {
                 font-size: 30px;
             }
-            .sponsor-image {
-                margin: 0;
-                width: 100%;
-                height: 300px;
-                max-height: 300px;
-                object-fit: contain;
-            }
+
             p {
                 color: var(--default-darkgrey);
                 strong {
@@ -63,6 +69,7 @@
             .sponsor{
                 width: 100%;
                 max-width: 100%;
+                padding: 30px;
             }
         }
     }
