--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -5,7 +5,6 @@ footer {
         width: 100%;
         display: flex;
         justify-content: space-around;
-        align-items: flex-end;
         gap: 50px;
         &:first-child {
             margin: 0 auto;
@@ -18,16 +17,26 @@ footer {
             border-radius: 25px;
             max-width: 600px;
             width: 100%;
-            height: 100%;
+            height: auto;
             overflow: hidden;
             position: relative;
             flex: 0 1 40%;
             word-wrap: normal;
-            p {
+            p,ul {
                 word-wrap: normal;
                 font-weight:bold;
-                &.end {
-                    color: var(--default-grey);
+            }
+            ul {
+                display: flex;
+                flex-wrap: wrap;
+                column-gap: 20px;
+            }
+            &:nth-child(2) {
+                justify-content: space-between;
+                p {
+                    &.end {
+                        color: var(--default-grey);
+                    }
                 }
             }
         }
