--- a/public/assets/css/sidebar.css
+++ b/public/assets/css/sidebar.css
@@ -3,6 +3,9 @@
     flex-direction: row;
     justify-content: space-between;
     gap: 50px;
+    .items-wrapper {
+        max-width: 1024px;
+    }
 }
 
 .sidebar {
