--- a/public/assets/css/fields.css
+++ b/public/assets/css/fields.css
@@ -8,3 +8,18 @@
         margin: 0 auto 15px;
     }
 }
+
+form.dropzone {
+    span {
+        color: var(--default-black);
+    }
+    .dz-error-message {
+        margin-top: 20px;
+    }
+    .dz-preview {
+        .dz-image {
+            display: flex;
+            align-items: center;
+        }
+    }
+}
