--- a/public/assets/css/gallery.css
+++ b/public/assets/css/gallery.css
@@ -1,34 +1,53 @@
 .image-container {
-    align-items:normal;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     gap: 7px;
-    display: flex;
-    flex-wrap: wrap;
     padding: 20px;
 }
+
 .image {
-    /*width: calc(20% - (0.5em - 16px) * 0.8);*/
-    width: calc(25% - 7px);
-    align-self:inherit;
-    margin:0;
+    border: 0;
+    position: relative;
     box-sizing: border-box;
-    display:flex;
-    flex-direction:column;
-    flex-grow:1;
-    justify-content: center;
-    max-width: calc(25% - 7px);
-    position:relative;
-    &:nth-child(4n + 1) {
-        margin-left: 7px;
-    }
+    width: 100%;
 }
 
-.gallery-image{
-    flex: 1 0 0%;
-    height:100%;
+.gallery-image {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-    width:100%;
-    display:block;
-    max-width:100%;
+    display: block;
     box-sizing: border-box;
     vertical-align: bottom;
 }
+
+.gallery-modal {
+    padding: 0;
+    &.show {
+        opacity: 1;
+        .btn-close {
+            border: 0;
+            .menu-close {
+                content: "";
+                background: url("/public/assets/images/icons/menu-close.svg") no-repeat center center;
+                display: block;
+                width: 35px;
+                height: 35px;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1200px){
+    .image-container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media only screen and (max-width: 980px){
+    .image-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+
