--- a/public/assets/css/swiper.css
+++ b/public/assets/css/swiper.css
@@ -5,7 +5,7 @@
     margin-top: 40px;
     margin-bottom: 40px;
     border-radius: 25px;
-    height: 350px;
+    height: 380px;
     .swiper-button-prev, .swiper-button-next {
         height: 100%;
         top: 0;
@@ -18,17 +18,15 @@
         margin: auto;
         align-content: center;
         align-items: center;
-        text-align: left;
+        text-align: center;
         flex-direction: column;
         img {
             max-height: 300px;
-            margin-bottom: 1rem;
-            width: auto;
-            height: auto;
+            margin: auto;
         }
 
         h3{
-            margin: 0.2em 0;
+            margin-top: 0.5rem;
             color: var(--default-black);
         }
     }
