--- a/public/assets/css/admin-layout.css
+++ b/public/assets/css/admin-layout.css
@@ -23,6 +23,11 @@
                 align-self: flex-end;
             }
         }
+        .searchbar {
+            form > .mb-4 {
+                margin-bottom: 0!important;
+            }
+        }
     }
 
     a {
