--- a/public/assets/css/default.css
+++ b/public/assets/css/default.css
@@ -192,6 +192,9 @@ button, a.button {
             color: var(--default-red);
         }
     }
+    &.create-button {
+        margin: 15px auto;
+    }
 }
 
 body {
