Google calender importeren

--- a/public/assets/css/default.css
+++ b/public/assets/css/default.css
@@ -6,7 +6,7 @@
     --default-offwhite: #ecebff;
     --default-red: #dc3545;
     --default-black: #000000;
-    --default-grey: #B0B0B0;
+    --default-grey: #707070;
     --default-darkgrey: #707070;
     --default-button-color: #e8f0fe;
     --input-shadow-color: #E1DEFF;
