--- a/public/assets/css/calender.css
+++ b/public/assets/css/calender.css
@@ -1,4 +1,10 @@
 .container{
+    .calender-container {
+        display: flex;
+        align-items: flex-start;
+        gap: 20px;
+    }
+
     .calender{
         background-color: white;
         border-radius: 2em;
@@ -24,6 +30,10 @@
 
 @media only screen and (max-width:900px){
     .container{
+        .calender-container {
+            flex-direction: column;
+        }
+
         .calender{
             margin: 0 auto;
             width: 95%;
