--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -147,6 +147,7 @@
             }
         }
         .navbar-collapse {
+            overflow-y: auto;
             position: fixed;
             top: 0;
             left: 0;
