fixed word wrapping

--- a/public/assets/css/default.css
+++ b/public/assets/css/default.css
@@ -101,11 +101,18 @@ body:not(.home) {
     }
 }
 
+ul li {
+    overflow-wrap: anywhere;
+    span, p, a {
+        overflow-wrap: anywhere;
+    }
+}
 
 p {
     line-height: 30px;
     word-wrap: normal;
     word-break: normal;
+    overflow-wrap: anywhere;
 }
 
 h1, h2, h3, h4, h5, h6 {
