--- a/public/assets/css/event-details.css
+++ b/public/assets/css/event-details.css
@@ -17,6 +17,9 @@
                     font-weight: 700;
                     margin-bottom: 30px;
                 }
+                p {
+                    overflow-wrap: anywhere;
+                }
             }
         }
     }
