#ag-32 #ag-33 simple apipage styling

--- a/public/assets/css/admin-layout.css
+++ b/public/assets/css/admin-layout.css
@@ -55,4 +55,24 @@
             }
         }
     }
+    .container {
+        .wrapper {
+            h2 {
+                font-size: revert;
+            }
+            .button-wrapper {
+                .button {
+                    margin: 15px auto;
+                }
+                form {
+                    .button {
+                        margin-bottom: 5px;
+                    }
+                    p {
+                        font-size: 14px;
+                    }
+                }
+            }
+        }
+    }
 }
